syntax = "proto3";

option java_package = "edu.kaist.algo.service";
option java_multiple_files = true;

import "gc_analysis.proto";

// The client streams the file contents to the server,
// and requests for the result status.
service LogUpload {
  rpc InfoUpload (FileInfo) returns (FileInfoResult) {}
  rpc LogUpload (stream UploadRequest) returns (UploadResult) {}
}

// Meta-information about the file being uploaded.
message FileInfo {
  string filename = 1;
}

// tells whether the file info was uploaded properly, and returns
// the identification number
message FileInfoResult {
  bool successful = 1;
  int64 id = 2;
}

// The file contents to upload on file ID.
message UploadRequest {
  int64 id = 1;
  bytes contents = 2;
}

// The response contains whether the request was successful and
// the requestID for further identification uses.
message UploadResult {
  bool successful = 1;
  int64 filesize = 2;
}
